--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   get: ^4.6.1
   flutter_svg: ^1.0.3
   google_fonts: ^2.3.1
+  shimmer: ^2.0.0
+  animations: ^2.0.2
 
 dev_dependencies:
   flutter_test:
