--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^2.3.1
   shimmer: ^2.0.0
   animations: ^2.0.2
+  equatable: ^2.0.3
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
