--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   animations: ^2.0.2
   equatable: ^2.0.3
   dartz: ^0.10.1
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
