student login aded

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   basic_template: 
-    path: ../basic_template
+    path: ../../FLUTTER/basic_template
   folldy_utils:
     path: ../folldy_utils
   record: ^4.1.1
